# zebot

./: .gitignore  Cargo.toml  Jenkinsfile  build.rs
docker/: Dockerfile
handlers/: bash  duden  errno  fortune  handler_lib.py  list  mundmische  nag  search  ud  url
irc2/: Cargo.toml
irc2/src/: command.rs  lib.rs  parser.rs
scripts/: deploy.sh
src/: callout.rs  handler.rs  irc.rs  main.rs
src/irc/: command.rs  handler.rs  message.rs  mod.rs  util.rs
src/irc2/: mod.rs  parser.rs
