[package]
name = "zebot"
version = "0.5.0"
authors = ["Marcus Borkenhagen <m@fritschy.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
futures-util = "0.3"
clap = "2.33"
rand = "0.8"
json = "0.12"
stopwatch = "0.0.7"
textwrap = "0.13"
regex = "1"
irc2 = { path = "irc2/" }
url = "2.2"
chrono = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
#reqwest = { version = "0.11", features = ["blocking"] }
#select = "0.5"

[profile.release]
debug = true
lto = true
codegen-units = 1
#panic = 'abort'

[profile.test]
debug = true
opt-level = 0
